test/message/vm_display_runtime_error.out
beginning
test.vm:1
throw new Error("boo!")
^

Error: boo!
    at test.vm:1:7
    at Script.runInThisContext (node:vm:*)
    at Object.runInThisContext (node:vm:*)
    at Object.<anonymous> (*test*message*vm_display_runtime_error.js:*)
test.vm:1
throw new Error("spooky!")
^

Error: spooky!
    at test.vm:1:7
    at Script.runInThisContext (node:vm:*)
    at Object.runInThisContext (node:vm:*)
    at Object.<anonymous> (*test*message*vm_display_runtime_error.js:*)
